--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <p-toast></p-toast>
 <!-- Criado o Container Login para obter o formulário de acesso -->
-<div class="login-container">
+<div *ngIf="!login" class="login-container">
 <h1>Login</h1>
 <form>
   <div class="p-input-filled">
