Tela Login: Centralização da Tela de Login

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -11,7 +11,9 @@
     <label for="password">Senha:</label><br>
     <input type="password" id="password" [(ngModel)]="usuario.senha" name="usuario.senha" pInputText>
   </div><br>
+  <div class="button-container">
   <button (click)="realizarLogin()" pButton pRipple label="Acessar" icon="pi" class="p-button p-mr-2"></button>
+  </div>
 </form>
 </div>
 <div *ngIf="login" class="card">
