Ajuste do titulo de Login

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,7 +2,7 @@
 <!-- Criado o Container Login para obter o formulário de acesso -->
 
 <div *ngIf="!login" class="login-container">
-<h1>***</h1>
+<h1>Login</h1>
 <form>
   <div class="p-input-filled">
     <label for="usuario">Usuário:</label><br>
